--- a/CodeNameFive/View/Base.lproj/Main.storyboard
+++ b/CodeNameFive/View/Base.lproj/Main.storyboard
@@ -2510,7 +2510,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KOa-aQ-uNt">
-                                <rect key="frame" x="20" y="606.66666666666663" width="361.66666666666669" height="215.33333333333337"/>
+                                <rect key="frame" x="20" y="631.66666666666663" width="361.66666666666669" height="215.33333333333337"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="case" translatesAutoresizingMaskIntoConstraints="NO" id="aXh-GU-7CC">
                                         <rect key="frame" x="10" y="36" width="24" height="24"/>
@@ -2524,7 +2524,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A-55 Block A, North Nazimabad Karachi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gcQ-6h-Cnj">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A-55 Block A, North Nazimabad Karachi" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gcQ-6h-Cnj">
                                         <rect key="frame" x="42" y="53" width="287.66666666666669" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="sdD-IP-bqf"/>
@@ -2533,11 +2533,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L-144 Sector 11/B, Bufferzone, Karachi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="Po6-2u-wJY">
-                                        <rect key="frame" x="42" y="92" width="311.66666666666669" height="17.333333333333329"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="17.5" id="fpS-Ex-2T6"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L-144 Sector 11/B, Bufferzone, Karachi" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="Po6-2u-wJY">
+                                        <rect key="frame" x="42" y="92" width="311.66666666666669" height="18.333333333333329"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -2549,7 +2546,7 @@
                                         </constraints>
                                     </progressView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JYU-dK-oja">
-                                        <rect key="frame" x="42" y="134.33333333333337" width="287.66666666666669" height="40"/>
+                                        <rect key="frame" x="42" y="135.33333333333337" width="287.66666666666669" height="40"/>
                                         <color key="backgroundColor" name="primaryButton"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="EWN-6U-JEI"/>
@@ -2587,10 +2584,11 @@
                                     <constraint firstItem="Po6-2u-wJY" firstAttribute="leading" secondItem="KOa-aQ-uNt" secondAttribute="leading" constant="42" id="LoX-dA-Z5M"/>
                                     <constraint firstItem="gcQ-6h-Cnj" firstAttribute="trailing" secondItem="JYU-dK-oja" secondAttribute="trailing" id="Nsm-ZA-MHl"/>
                                     <constraint firstItem="Fk6-fo-gE1" firstAttribute="top" secondItem="KOa-aQ-uNt" secondAttribute="top" id="Pqm-lO-hyz"/>
+                                    <constraint firstItem="JYU-dK-oja" firstAttribute="top" secondItem="Po6-2u-wJY" secondAttribute="bottom" constant="25" id="TnM-zJ-Ssy"/>
                                     <constraint firstItem="Fk6-fo-gE1" firstAttribute="centerX" secondItem="KOa-aQ-uNt" secondAttribute="centerX" id="Tnp-58-lgJ"/>
-                                    <constraint firstItem="JYU-dK-oja" firstAttribute="top" secondItem="Po6-2u-wJY" secondAttribute="bottom" constant="25" id="W22-qc-79B"/>
                                     <constraint firstItem="gcQ-6h-Cnj" firstAttribute="top" secondItem="5bm-ge-rGt" secondAttribute="bottom" constant="8" id="YV8-Ng-YXe"/>
                                     <constraint firstAttribute="trailing" secondItem="5bm-ge-rGt" secondAttribute="trailing" constant="32" id="asv-fh-teO"/>
+                                    <constraint firstAttribute="bottom" secondItem="JYU-dK-oja" secondAttribute="bottom" constant="40" id="eAi-8h-aFv"/>
                                     <constraint firstItem="5bm-ge-rGt" firstAttribute="trailing" secondItem="gcQ-6h-Cnj" secondAttribute="trailing" id="hNP-FA-O1W"/>
                                     <constraint firstItem="Fk6-fo-gE1" firstAttribute="leading" secondItem="KOa-aQ-uNt" secondAttribute="leading" id="iPk-6D-xmv"/>
                                     <constraint firstItem="Po6-2u-wJY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JYU-dK-oja" secondAttribute="leading" id="iwP-xM-bZh"/>
@@ -2607,7 +2605,7 @@
                             <constraint firstItem="QdS-WH-Pvp" firstAttribute="leading" secondItem="W8O-ZS-VJ3" secondAttribute="leading" id="dQa-TB-hVB"/>
                             <constraint firstItem="KOa-aQ-uNt" firstAttribute="leading" secondItem="nrg-ZC-pW0" secondAttribute="leadingMargin" id="g58-Wv-rbW"/>
                             <constraint firstItem="QdS-WH-Pvp" firstAttribute="width" secondItem="KOa-aQ-uNt" secondAttribute="width" multiplier="1.1447" id="lzg-rg-ivw"/>
-                            <constraint firstItem="W8O-ZS-VJ3" firstAttribute="bottom" secondItem="KOa-aQ-uNt" secondAttribute="bottom" constant="40" id="nQX-lk-ND8"/>
+                            <constraint firstItem="W8O-ZS-VJ3" firstAttribute="bottom" secondItem="KOa-aQ-uNt" secondAttribute="bottom" constant="15" id="nQX-lk-ND8"/>
                             <constraint firstItem="QdS-WH-Pvp" firstAttribute="height" secondItem="KOa-aQ-uNt" secondAttribute="height" multiplier="4" id="s18-AS-iuv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="W8O-ZS-VJ3"/>
@@ -2763,7 +2761,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PD0-o8-CUL" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4381.159420289855" y="810.9375"/>
+            <point key="canvasLocation" x="3496" y="811"/>
         </scene>
         <!--Register-->
         <scene sceneID="vii-bB-Tbp">
